--- a/plugin.xml
+++ b/plugin.xml
@@ -56,5 +56,6 @@
         <source-file src="src/android/CDVCardFlight.java" target-dir="src/org/weeels/plugins/cardFlight" />
         <source-file src="src/android/CardFlightHandler.java" target-dir="src/org/weeels/plugins/cardFlight" />
         <source-file src="src/android/TokenizationHandler.java" target-dir="src/org/weeels/plugins/cardFlight" />
+        <source-file src="src/android/AutoConfigHandler.java" target-dir="src/org/weeels/plugins/cardFlight" />
     </platform>
 </plugin>
